--- a/share.html
+++ b/share.html
@@ -7,63 +7,86 @@
 </head>
 <body>
 <script>
+    /**
+     * Gets a URL query parameter by name.
+     * @param {string} name - Parameter name to retrieve.
+     * @returns {string} Value of the parameter or empty string.
+     */
     function getUrlParameter(name) {
-        name = name.replace(/[$]/, '\\$').replace(/[$]/, '\\$');
-        const regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
-        const results = regex.exec(location.search);
-        return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        const regex = new RegExp('[?&]' + name + '=([^&#]*)');
+        const results = regex.exec(window.location.search);
+        return results ? decodeURIComponent(results[1].replace(/\+/g, ' ')) : '';
     }
 
+    /**
+     * Redirects user to a mapped URL based on either `url` or `file` parameter.
+     */
     function handleRedirect() {
         const directUrl = getUrlParameter('url');
         const fileKey = getUrlParameter('file');
 
+        // If a direct URL is given, use it immediately
         if (directUrl) {
-            console.log('Redirecting to direct URL: ' + directUrl);
+            console.log(`Redirecting to direct URL: ${directUrl}`);
             window.location.href = directUrl;
             return;
         }
 
+        // If no file key is provided, redirect to 404
         if (!fileKey) {
-            console.warn('No file parameter provided.');
-            window.location.href = 'https://pages.appgeniusnest.top/404.html';
+            console.warn('Missing "file" parameter.');
+            redirectTo404();
             return;
         }
 
+        // Fetch redirect mappings from JSON
         const xhr = new XMLHttpRequest();
         xhr.open('GET', 'https://pages.appgeniusnest.top/redirects.json', true);
-        xhr.onreadystatechange = function () {
-            if (xhr.readyState === 4) {
-                if (xhr.status === 200) {
-                    try {
-                        const redirectUrls = JSON.parse(xhr.responseText);
-                        console.log('Looking up key:', fileKey);
 
-                        if (redirectUrls.hasOwnProperty(fileKey)) {
-                            const target = redirectUrls[fileKey];
-                            console.log('Redirecting to mapped URL:', target);
-                            window.location.href = target;
-                        } else {
-                            console.warn('Key not found in JSON:', fileKey);
-                            window.location.href = 'https://pages.appgeniusnest.top/404.html';
-                        }
-                    } catch (e) {
-                        console.error('JSON parse error:', e);
-                        window.location.href = 'https://pages.appgeniusnest.top/404.html';
-                    }
+        xhr.onload = function () {
+            if (xhr.status !== 200) {
+                console.error(`Failed to fetch redirects.json. HTTP status: ${xhr.status}`);
+                redirectTo404();
+                return;
+            }
+
+            try {
+                const redirects = JSON.parse(xhr.responseText);
+
+                // Normalize keys for case-insensitive matching
+                const normalizedKey = fileKey.toLowerCase();
+                const matchedKey = Object.keys(redirects).find(key => key.toLowerCase() === normalizedKey);
+
+                if (matchedKey) {
+                    const targetUrl = redirects[matchedKey];
+                    console.log(`Redirecting to mapped URL: ${targetUrl}`);
+                    window.location.href = targetUrl;
                 } else {
-                    console.error('Failed to fetch redirects.json. Status:', xhr.status);
-                    window.location.href = 'https://pages.appgeniusnest.top/404.html';
+                    console.warn(`No matching redirect found for: ${fileKey}`);
+                    redirectTo404();
                 }
+            } catch (error) {
+                console.error('Error parsing redirects.json:', error);
+                redirectTo404();
             }
         };
+
         xhr.onerror = function () {
-            console.error('Network error while loading redirects.json');
-            window.location.href = 'https://pages.appgeniusnest.top/404.html';
+            console.error('Network error while requesting redirects.json');
+            redirectTo404();
         };
+
         xhr.send();
     }
 
+    /**
+     * Redirects the user to a 404 error page.
+     */
+    function redirectTo404() {
+        window.location.href = 'https://pages.appgeniusnest.top/404.html';
+    }
+
+    // Run on page load
     handleRedirect();
 </script>
 </body>
