--- a/share.html
+++ b/share.html
@@ -76,7 +76,7 @@
     }
 
     function redirectTo404() {
-        //alert('Page not found, redirecting to a 404 error page...');
+        alert('Page not found, redirecting to a 404 error page...');
         window.location.href = 'https://pages.appgeniusnest.top/404.html';
     }
 
