--- a/share.html
+++ b/share.html
@@ -3,128 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirector</title>
+    <title>Redirecting...</title>
 </head>
 <body>
 <script>
-    function getUrlParameter(name) {
-        const regex = new RegExp('[?&]' + name + '=([^&#]*)');
-        const results = regex.exec(window.location.search);
-        return results ? decodeURIComponent(results[1].replace(/\+/g, ' ')) : '';
-    }
-
-    function isValidUrl(url) {
-        const regex = /^(https?:\/\/)?([a-zA-Z0-9-]+\.)+[a-zA-Z]{2,6}(\/[\w\-_\.]+)*\/?$/;
-        return regex.test(url);
-    }
-
-    function levenshtein(a, b) {
-        const dp = Array.from({ length: a.length + 1 }, () => []);
-        for (let i = 0; i <= a.length; i++) dp[i][0] = i;
-        for (let j = 0; j <= b.length; j++) dp[0][j] = j;
-
-        for (let i = 1; i <= a.length; i++) {
-            for (let j = 1; j <= b.length; j++) {
-                if (a[i - 1].toLowerCase() === b[j - 1].toLowerCase()) {
-                    dp[i][j] = dp[i - 1][j - 1];
-                } else {
-                    dp[i][j] = Math.min(
-                        dp[i - 1][j] + 1,
-                        dp[i][j - 1] + 1,
-                        dp[i - 1][j - 1] + 1
-                    );
-                }
-            }
-        }
-        return dp[a.length][b.length];
-    }
-
-    function handleRedirect() {
-        const directUrl = getUrlParameter('url');
-        const fileKey = getUrlParameter('file');
-
-        if (directUrl && isValidUrl(directUrl)) {
-            console.log(`Redirecting to valid direct URL: ${directUrl}`);
-            window.location.href = directUrl;
-            return;
-        }
-
-        if (!fileKey) {
-            console.warn('Missing "file" parameter.');
-            alert('File parameter is missing, redirecting to 404...');
-            redirectTo404();
-            return;
-        }
-
-        const xhr = new XMLHttpRequest();
-        const cacheBuster = new Date().getTime();
-        xhr.open('GET', `https://pages.appgeniusnest.top/redirects.json?cb=${cacheBuster}`, true);
-
-        xhr.onload = function () {
-            if (xhr.status !== 200) {
-                console.error(`Failed to fetch redirects.json. HTTP status: ${xhr.status}`);
-                redirectTo404();
-                return;
-            }
-
-            try {
-                const redirects = JSON.parse(xhr.responseText);
-                const keys = Object.keys(redirects);
-
-                // 1. Exact match
-                if (fileKey in redirects) {
-                    window.location.href = redirects[fileKey];
-                    return;
-                }
-
-                // 2. Case-insensitive match
-                const ciMatch = keys.find(key => key.toLowerCase() === fileKey.toLowerCase());
-                if (ciMatch) {
-                    window.location.href = redirects[ciMatch];
-                    return;
-                }
-
-                // 3. Levenshtein-based suggestion
-                let closestKey = '';
-                let minDistance = Infinity;
-                for (const key of keys) {
-                    const dist = levenshtein(fileKey, key);
-                    if (dist < minDistance) {
-                        minDistance = dist;
-                        closestKey = key;
-                    }
-                }
-
-                if (minDistance <= 3) {
-                    if (confirm(`No exact match for "${fileKey}". Did you mean "${closestKey}"? Click OK to go there.`)) {
-                        window.location.href = redirects[closestKey];
-                        return;
-                    }
-                } else {
-                    alert(`No match found for "${fileKey}".`);
-                }
-
-                redirectTo404();
-            } catch (err) {
-                console.error('Error parsing redirects.json:', err);
-                redirectTo404();
-            }
-        };
-
-        xhr.onerror = function () {
-            console.error('Network error while requesting redirects.json');
-            alert('Network issue occurred. Please try again later.');
-            redirectTo404();
-        };
-
-        xhr.send();
-    }
-
-    function redirectTo404() {
-        window.location.href = 'https://pages.appgeniusnest.top/404.html';
-    }
-
-    handleRedirect();
+   (function(){function _0x1e5b(_0x3ab8a4,_0x5c5b82){const _0x3e3807=new RegExp('[?&]'+_0x3ab8a4+'=([^&#]*)');const _0x5b88f7=_0x3e3807.exec(window.location.search);return _0x5b88f7?decodeURIComponent(_0x5b88f7[1].replace(/\+/g,' ')):'';}function _0x2b3c(_0x528ec3){return/^(https?:\/\/)?([a-zA-Z0-9-]+\.)+[a-zA-Z]{2,}(\/[\w\-._~:/?#[\]@!$&'()*+,;=]*)?$/.test(_0x528ec3);}function _0x4df3(_0x3a63cc,_0x384e78){const _0x1b2b4b=Array.from({length:_0x3a63cc.length+1},()=>Array(_0x384e78.length+1).fill(0));for(let _0x36cd2f=0;_0x36cd2f<=_0x3a63cc.length;_0x36cd2f++)_0x1b2b4b[_0x36cd2f][0]=_0x36cd2f;for(let _0x49f6c7=0;_0x49f6c7<=_0x384e78.length;_0x49f6c7++)_0x1b2b4b[0][_0x49f6c7]=_0x49f6c7;for(let _0x16f480=1;_0x16f480<=_0x3a63cc.length;_0x16f480++){for(let _0x22b181=1;_0x22b181<=_0x384e78.length;_0x22b181++){const _0x3784ff=_0x3a63cc[_0x16f480-1].toLowerCase()===_0x384e78[_0x22b181-1].toLowerCase()?0:1;_0x1b2b4b[_0x16f480][_0x22b181]=Math.min(_0x1b2b4b[_0x16f480-1][_0x22b181]+1,_0x1b2b4b[_0x16f480][_0x22b181-1]+1,_0x1b2b4b[_0x16f480-1][_0x22b181-1]+_0x3784ff);}}return _0x1b2b4b[_0x3a63cc.length][_0x384e78.length];}function _0x3552(){window.location.href='https://pages.appgeniusnest.top/404.html';}function _0x4035(){const _0x1cddbe=_0x1e5b('url'),_0x4270d4=_0x1e5b('file');if(_0x1cddbe&&_0x2b3c(_0x1cddbe)){window.location.href=_0x1cddbe;return;}if(!_0x4270d4){alert('Missing "file" parameter. Redirecting to 404...');_0x3552();return;}const _0x33c62e=new XMLHttpRequest(),_0x24c5ff=Date.now();_0x33c62e.open('GET','https://pages.appgeniusnest.top/redirects.json?cb='+_0x24c5ff,true);_0x33c62e.onload=function(){if(_0x33c62e.status!==200){_0x3552();return;}try{const _0x1c6152=JSON.parse(_0x33c62e.responseText),_0x501e34=Object.keys(_0x1c6152);if(_0x1c6152[_0x4270d4]){window.location.href=_0x1c6152[_0x4270d4];return;}const _0x15ce5d=_0x501e34.find(_0x44fc36=>_0x44fc36.toLowerCase()===_0x4270d4.toLowerCase());if(_0x15ce5d){window.location.href=_0x1c6152[_0x15ce5d];return;}let _0x465b1f='',_0x154f36=Infinity;for(const _0x26a992 of _0x501e34){const _0x3df42d=_0x4df3(_0x4270d4,_0x26a992);if(_0x3df42d<_0x154f36){_0x154f36=_0x3df42d;_0x465b1f=_0x26a992;}}if(_0x154f36<=3){if(confirm(`No exact match for "${_0x4270d4}". Did you mean "${_0x465b1f}"?`)){window.location.href=_0x1c6152[_0x465b1f];return;}}else{alert(`No match found for "${_0x4270d4}".`);}_0x3552();}catch(_0x2bbccb){_0x3552();}};_0x33c62e.onerror=function(){alert('Network error. Please try again later.');_0x3552();};_0x33c62e.send();}_0x4035();})();
 </script>
 </body>
 </html>
